# ctp_system

./: .env.example  .gitignore  Cargo.toml  README.md  机试题目-基于CTP接口的多账户交易服务.md
config/: server.toml
crates/client/: Cargo.toml
crates/client/src/: connection.rs  credentials.rs  lib.rs  main.rs  market_data.rs  trading.rs
crates/common/: Cargo.toml
crates/common/src/: error.rs  lib.rs  logging.rs  protocol.rs
crates/common/src/network/: backoff.rs  error.rs  mod.rs  mode.rs
crates/common/src/network/ctp_client/: client.rs  config.rs  mod.rs  types.rs
crates/common/src/network/tcp_client/: client.rs  config.rs  mod.rs  types.rs
crates/model/: Cargo.toml
crates/model/src/: ctp.rs  enums.rs  identifiers.rs  lib.rs  reports.rs  types.rs
crates/server/: Cargo.toml
crates/server/src/: actor.rs  config.rs  lib.rs  main.rs  session.rs  trade_actor_ops.rs
crates/server/src/actor/: common.rs  data.rs  trade.rs
crates/server/src/adapter/: mod.rs
crates/server/src/adapter/exchange/: mapping.rs  md.rs  mod.rs  trade.rs
crates/server/src/adapter/internal/: mod.rs  tcp_server.rs
docs/: 机考提交说明.md  项目架构与进度.md
flow/: md_TradingDay.con  trade_268508Public.con  trade_268508TradingDay.con  trade_268809Private.con  trade_268809Public.con
