[package]
name = "ctp-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Trading terminal client talking to ctp-server"

[[bin]]
name = "ctp-client"
path = "src/main.rs"

[dependencies]
ctp-common = { workspace = true }
ctp-model = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
dotenvy = "0.15.7"
