[package]
name = "ctp-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Multi-account CTP trading server (1 MD + N Trade)"

[[bin]]
name = "ctp-server"
path = "src/main.rs"

[dependencies]
ctp-common = { workspace = true }
ctp-model = { workspace = true }
ctp2rs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
